--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 body {
+   background-color: black;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -12,3 +13,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.move-enter {
+   opacity: 0.01;
+   transform: translate(20px, 0)
+}
+
+.move-enter-active {
+   opacity: 1;
+   transform: translate(0, 0);
+   transition: all 500ms ease-in;
+}
+
+.move-exit {
+   opacity: 0;
+} 
