--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,3 +28,9 @@ code {
 .move-exit {
    opacity: 0;
 } 
+
+#header-img {
+   height: 460px;
+   background-image: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url('./isometric-bg.jpg');
+   background-size: cover;
+}
