Add feature get dental record info for patient to view

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,5 +32,9 @@ code {
 #header-img {
    height: 460px;
    background-image: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url('./isometric-bg.jpg');
+   background-attachment: fixed;
+   background-position: center;
+   background-repeat: no-repeat;
    background-size: cover;
+   
 }
